End of section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "capital721",
+    "ApiKey": "521881866633994",
+    "ApiSecret": "MzgvbLLrfIrrC5JIxUKkgcyDq0o"
+  }
 }
